test/force-app/main/default/objects/PERT_Schedule__c/PERT_Schedule__c.object-meta.xml
<CustomObject>
    <label>PERT Schedule</label>
    <nameField>
        <displayFormat>PERT-{0000}</displayFormat>
        <label>Task Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PERT Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>