test/force-app/main/default/objects/PERT_Schedule__c/fields/Development_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Development_Tracker__c</fullName>
    <label>Development Tracker</label>
    <referenceTo>Development_Tracker__c</referenceTo>
    <relationshipLabel>PERT Schedules</relationshipLabel>
    <relationshipName>PERT_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>