test/force-app/main/default/objects/PERT_Schedule__c/fields/Expected_Duration__c.field-meta.xml
<CustomField>
    <fullName>Expected_Duration__c</fullName>
    <description>Expected task duration</description>
    <formula>(Optimistic__c +4* Most_Likely__c + Pessimistic__c)/6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>