test/force-app/main/default/objects/PERT_Schedule__c/fields/Most_Likely__c.field-meta.xml
<CustomField>
    <fullName>Most_Likely__c</fullName>
    <inlineHelpText>Most Likely task duration in calendar days</inlineHelpText>
    <label>Most Likely</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>