test/force-app/main/default/objects/PERT_Schedule__c/fields/Optimistic__c.field-meta.xml
<CustomField>
    <fullName>Optimistic__c</fullName>
    <description>Optimistic task duration in calendar days</description>
    <label>Optimistic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>