test/force-app/main/default/objects/PERT_Schedule__c/fields/Pessimistic__c.field-meta.xml
<CustomField>
    <fullName>Pessimistic__c</fullName>
    <inlineHelpText>Pessimistic task duration in calendar days</inlineHelpText>
    <label>Pessimistic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>