test/force-app/main/default/objects/PERT_Schedule__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <inlineHelpText>Task Name</inlineHelpText>
    <label>Task Name</label>
    <length>252</length>
    <required>true</required>
    <type>Text</type>
</CustomField>