test/force-app/main/default/objects/PERT_Schedule__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <description>Variance of task duration</description>
    <formula>((Pessimistic__c - Optimistic__c)/6)^2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Variance of task duration</inlineHelpText>
    <label>Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>